# rocktop

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  train.py
.github/workflows/: actionlint.yml  diagrams.yml  docker.yml  docs.yml  images.yml  k8s.yml  lint.yml  mcp.yml  release.yml  sbom.yml  scripts.yml  security.yml  tests.yml  trivy-fs.yml  typecheck.yml
app/: README.md  infer.py
configs/hydra/: README.md  defaults.yaml
docker/: Dockerfile.cuda  Dockerfile.rocm  README.md
docs/diagrams/: main.mmd  mermaid.dark.json  mermaid.light.json  puppeteer.json  stack.mmd
k8s/: README.md  deploy-infer.yaml  job-preproc.yaml
policy/: README.md
policy/k8s/: deny_latest_tag.rego  disallow_cluster_scoped_rbac.rego  required_labels.rego  required_pod_security.rego  required_resources.rego
scripts/: README.md  mcp_smoke.py  mcp_smoke.sh  pytest_wrapper.py  sox_normalize.sh  sox_resample.sh
servers/rocktop_mcp/: README.md  pyproject.toml
servers/rocktop_mcp/rocktop_mcp/: __init__.py  __main__.py
src/rocktop/: __init__.py  config.py  data_catalog.py  invariants.py
tests/: README.md  test_app_infer.py  test_config.py  test_data_catalog.py  test_invariants.py  test_tools_stubs.py
tools/: README.md  cache_f0.py  cache_units.py
