[project]
name = "rocktop"
version = "0.0.1"
description = "Rocktop monorepo: core library and MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.3.0",
  "mypy>=1.7.0",
  "bandit>=1.7.5",
  "pip-audit>=2.7.0",
  "nbstripout>=0.6.1",
  "codespell>=2.2.6",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "hypothesis>=6.90.0",
  "pytest-benchmark>=4.0.0",
]
api = [
  "fastapi>=0.111,<1.0",
  "soundfile>=0.12,<1.0",
  "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "B", "UP", "SIM"]
exclude = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests", ".venv", "venv"]

[tool.uv.workspace]
members = [
  "servers/rocktop_mcp",
]
